[package]
name = "pca9685-rppal"
version = "0.1.0"
authors = ["BradenEverson <bradeneverson@gmail.com>"]
description = "Raspberry Pi Wrapper for the Adafruit PCA9685 Servo/PWM Driver"
edition = "2021"
license = "MIT"
repository = "https://github.com/BradenEverson/pca9685-rppal"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
rppal = "0.22.1"
